Regresion: Shift+t aiming with light source do not work over empty background #93360

Closed
opened 2021-11-24 18:59:23 +01:00 by Vyacheslav Kobozev · 9 comments

System Information
Operating system: Windows-8.1-6.3.9600-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.41

Blender Version
Broken: version: 3.1.0 Alpha, branch: master, commit date: 2021-11-24 12:58, hash: 72acce43bc
Worked: 3.0.0 Beta(2cc56495f3ce)
Caused by aa0ac0035a

Short description of error
Place a sun and cube into scene, select sun and press Shift+t.
In 3.0 lightsource aiming to cursor anywhere, in 3.1 it works only if cursor is over cube.

Steps to Reproduce

  • Open .blend file
  • Select light
  • Press {key Shift T} over viewport

Test File:
#93360.blend
2021-11-24_20-54-56.mp4

**System Information** Operating system: Windows-8.1-6.3.9600-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.41 **Blender Version** Broken: version: 3.1.0 Alpha, branch: master, commit date: 2021-11-24 12:58, hash: `72acce43bc` Worked: 3.0.0 Beta(`2cc56495f3ce`) Caused by aa0ac0035a **Short description of error** Place a sun and cube into scene, select sun and press Shift+t. In 3.0 lightsource aiming to cursor anywhere, in 3.1 it works only if cursor is over cube. **Steps to Reproduce** - Open .blend file - Select light - Press {key Shift T} over viewport Test File: [#93360.blend](https://archive.blender.org/developer/F12024256/T93360.blend) [2021-11-24_20-54-56.mp4](https://archive.blender.org/developer/F12016987/2021-11-24_20-54-56.mp4)

Added subscriber: @Vyach

Added subscriber: @Vyach
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Hi, thanks for the report. I can confirm on master: 4930cd5db6153d6fd40481ea1be0f5cb33d46466

Don't think this is expected behavior. Will bisect.

Hi, thanks for the report. I can confirm on master: `4930cd5db6153d6fd40481ea1be0f5cb33d46466` Don't think this is expected behavior. Will bisect.
Pratik Borhade changed title from Regresion: Shift+t aiming with light source do not work over empty backgroung to Regresion: Shift+t aiming with light source do not work over empty background 2021-11-24 20:10:50 +01:00
Member

Added subscriber: @mano-wii

Added subscriber: @mano-wii
Member

Caused by: aa0ac0035a

cc @mano-wii

Caused by: aa0ac0035a cc @mano-wii
Member

Recent regression so setting priority to High.

Note: This only appears on master.

Recent regression so setting priority to High. Note: This only appears on master.

This issue was referenced by bc4c20d414

This issue was referenced by bc4c20d414e90c8e25e12cfee860e86adb06e961

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2021-11-25 14:19:29 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#93360
No description provided.